--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for IO-Stream-Crypt-RC4
 
+1.0.1	Wed Nov 19 05:09:12 EET 2008
+	Added compatibility with Win32.
+
 1.0.0	Sun Nov 16 02:36:32 EET 2008
 	Initial release.
 
