--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for IO-Stream-Crypt-RC4
 
+1.0.2	Sun May 13 06:01:33 EEST 2012
+	Fix requirements and tests.
+
 1.0.1	Wed Nov 19 05:09:12 EET 2008
 	Added compatibility with Win32.
 
