--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for IO-Stream-Crypt-RC4
 
+1.0.3   Thu Oct  3 16:49:21 EEST 2013
+	Remove MYMETA.*
+
 1.0.2	Sun May 13 06:01:33 EEST 2012
 	Fix requirements and tests.
 
